--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,10 @@
 [build]
-  command = "pnpm install --no-frozen-lockfile && pnpm build"
+  command = "pnpm build"
   publish = ".next"
+
+[build.environment]
+  PNPM_FLAGS = "--no-frozen-lockfile"
+  NODE_VERSION = "22.20.0"
 
 [[plugins]]
   package = "@netlify/plugin-nextjs"
