--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@mdx-js/loader": "^3.1.0",
     "@mdx-js/react": "^3.1.0",
     "@prisma/adapter-libsql": "^6.16.3",
-    "@prisma/client": "^6.16.3",
+    "@prisma/client": "6.16.3",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-label": "^2.1.7",
@@ -34,7 +34,6 @@
     "motion": "^12.23.11",
     "next": "15.3.5",
     "next-themes": "^0.4.6",
-    "prisma": "^6.16.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "swr": "^2.3.6",
@@ -50,6 +49,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.3.5",
+    "prisma": "6.16.3",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.5",
     "typescript": "^5"
