--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "fumadocs-mdx && next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "fumadocs-mdx"
+    "postinstall": "fumadocs-mdx && prisma generate"
   },
   "dependencies": {
     "@libsql/client": "^0.15.15",
