--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "@libsql/client": "^0.15.15",
     "@mdx-js/loader": "^3.1.0",
-    "@mdx-js/react": "^3.1.0",
+    "@mdx-js/mdx": "^3.1.1",
+    "@mdx-js/react": "^3.1.1",
     "@prisma/adapter-libsql": "^6.16.3",
     "@prisma/client": "6.16.3",
     "@radix-ui/react-accordion": "^1.2.3",
@@ -33,9 +34,12 @@
     "lucide-react": "^0.525.0",
     "motion": "^12.23.11",
     "next": "15.3.5",
+    "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-markdown": "^10.1.0",
+    "remark-gfm": "^4.0.1",
     "swr": "^2.3.6",
     "tailwind-merge": "^3.3.1",
     "vaul": "^1.1.2",
